--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,7 @@
   --button-send-box-shadow-color: rgba(0, 0, 0, 0.15);
   --placeholder-color: rgba(117, 117, 117, 0.5);
   --footer-input-border-color: rgba(255, 255, 255, 0.3);
+  --icon-black-fill: #212121;
 }
 
 .contact-link,
@@ -175,10 +176,15 @@ body {
 .logo {
   font-family: Raleway, sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.17;
   text-decoration: none;
   color: var(--accent-text-logo-color);
+}
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+  }
 }
 
 .logo__accent_color_black {
@@ -678,14 +684,33 @@ body {
   }
   .mobile-menu__container {
     position: relative;
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     padding: 48px 40px;
   }
   .mobile-menu-nav {
-    margin-bottom: auto;
+    margin-bottom: 302px;
+  }
+  .mobile-menu-nav__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+  .mobile-menu-nav__link {
+    margin-bottom: 32px;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+    color: var(--basic-text-color);
+    transition: color var(--timing-function);
+  }
+  .mobile-menu-nav__link:hover, .mobile-menu-nav__link:focus {
+    color: var(--link-hover-blue-color);
+  }
+  .mobile-menu-nav__link_current {
+    color: var(--link-hover-blue-color);
   }
   .mobile-menu__close-btn {
     position: absolute;
@@ -697,9 +722,58 @@ body {
     border: 0;
     background-color: transparent;
     line-height: 0;
+    cursor: pointer;
+    transition: fill var(--timing-function);
+  }
+  .mobile-menu__close-btn:hover .mobile-menu__close-icon,
+.mobile-menu__close-btn:focus .mobile-menu__close-icon {
+    fill: var(--link-hover-blue-color);
+  }
+  .mobile-menu-contacts {
+    margin-bottom: 64px;
+  }
+  .mobile-menu-contacts__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+  .mobile-header-tel,
+.mobile-header-link {
+    font-weight: 500;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+  }
+  .mobile-header-tel {
+    font-size: 34px;
+    color: var(--accent-text-logo-color);
+  }
+  .mobile-header-link {
+    font-size: 24px;
+    color: var(--secondary-text-color);
+  }
+  .mobile-menu-socials {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
   .mobile-menu-socials__item {
+    position: relative;
+    gap: 20px;
+    padding-right: 10px;
+  }
+  .mobile-menu-socials__item:not(:last-child) {
     border-right: 1px solid rgba(33, 33, 33, 0.2);
+  }
+  .mobile-menu-socials__item::after {
+    position: absolute;
+    content: "";
+    width: 22px;
+    height: 0px;
+  }
+  .mobile-header-socials {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+    color: var(--link-hover-blue-color);
   }
 }
 @media screen and (min-width: 768px) {
@@ -955,11 +1029,11 @@ body {
 .member__team-subtitle {
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.19;
+  line-height: 1.17;
   text-align: center;
 }
 
-.team-list {
+.team-social-list {
   display: flex;
   column-gap: 10px;
   align-items: center;
@@ -977,7 +1051,7 @@ body {
 .team-icon {
   background-color: var(--link-icon-background-color);
   fill: var(--link-icon-grey-color);
-  transition: background-color var(--timing-function);
+  transition: background-color var(--timing-function), fill var(--timing-function);
 }
 .team-icon:hover, .team-icon:focus {
   background-color: var(--link-hover-blue-color);
