--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -23,7 +23,7 @@
   
   .mobile-menu__container {
     position: relative;
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -31,7 +31,30 @@
   }
 
   .mobile-menu-nav {
-    margin-bottom: auto;
+    margin-bottom: 302px;
+  }
+
+  .mobile-menu-nav__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+
+  .mobile-menu-nav__link {
+    margin-bottom: 32px;
+    @include font (500, 40px);
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+    color: var(--basic-text-color);
+    transition: color var(--timing-function);
+
+    &:hover,
+    &:focus {
+      color: var(--link-hover-blue-color);
+    }
+  }
+
+  .mobile-menu-nav__link_current {
+    color: var(--link-hover-blue-color);
   }
   
   .mobile-menu__close-btn {
@@ -44,10 +67,70 @@
     border: 0;
     background-color: transparent;
     line-height: 0;
+    cursor: pointer;
+
+    transition: fill var(--timing-function);
+  }
+
+  .mobile-menu__close-btn:hover .mobile-menu__close-icon,
+  .mobile-menu__close-btn:focus .mobile-menu__close-icon {
+    fill: var(--link-hover-blue-color);
+  }
+
+  .mobile-menu-contacts {
+    margin-bottom: 64px;
+  }
+
+  .mobile-menu-contacts__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+
+  .mobile-header-tel,
+  .mobile-header-link {
+    font-weight: 500;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    }
+
+  .mobile-header-tel {
+    font-size: 34px;
+    color: var(--accent-text-logo-color);
+  }
+
+  .mobile-header-link {
+    font-size: 24px;
+    color: var(--secondary-text-color);
+  }
+
+  .mobile-menu-socials {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
     
   .mobile-menu-socials__item {
-    border-right: 1px solid rgba(33, 33, 33, 0.2);
+    position: relative;
+    gap: 20px;
+    padding-right: 10px;
+
+    &:not(:last-child) {
+      border-right: 1px solid rgba(33, 33, 33, 0.2);
+    }
+
+    &::after {
+      position: absolute;
+      content: '';
+      width: 22px;
+      height: 0px;
+    }
+  }
+
+  .mobile-header-socials {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+    color: var(--link-hover-blue-color);
   }
 }
 
