--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -51,4 +51,5 @@
   --button-send-box-shadow-color: rgba(0, 0, 0, 0.15);
   --placeholder-color: rgba(117, 117, 117, 0.5);
   --footer-input-border-color: rgba(255, 255, 255, 0.3);
+  --icon-black-fill: #212121;
 }
