--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
 }
 
-.modal-form-title {
+.modal-form__title {
   margin-bottom: 12px;
   font-weight: 700;
   font-size: 20px;
@@ -12,7 +12,7 @@
   text-align: center;
 }
 
-.form-label-desc {
+.form-label__desc {
   display: block;
   margin-bottom: 4px;
   font-size: 12px;
