--- a/sass/components/_footer-join-part.scss
+++ b/sass/components/_footer-join-part.scss
@@ -19,7 +19,7 @@
   column-gap: 10px;
 }
 
-.social-link-icon {
+.social-link {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -37,7 +37,7 @@
   }
 }
 
-.social-list-items {
+.social-list__items {
   align-items: center;
   justify-content: center;
 }
