--- a/sass/layout/_team-members.scss
+++ b/sass/layout/_team-members.scss
@@ -2,7 +2,7 @@
   background-color: var(--tertiary-background-color);
 }
 
-.team-flex {
+.team-worker-list {
   display: flex;
   gap: 30px;
   flex-direction: column;
@@ -13,7 +13,7 @@
   }
 }
 
-.team-part {
+.team-worker-list__item {
   background-color: var(--main-background-color);
   box-shadow: 0 2px 1px 0 var(--team-shadow-one-color), 0 1px 1px 0 var(--team-shadow-two-color),
     0 1px 3px 0 var(--team-shadow-three-color);
@@ -29,7 +29,7 @@
   }
 }
 
-.group-social-link {
+.group-social {
   padding-bottom: 30px;
 }
 
