--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -130,6 +130,7 @@
     font-size: 18px;
     line-height: 1.22;
     letter-spacing: 0.02em;
+    text-decoration: none;
     color: var(--link-hover-blue-color);
   }
 }
