--- a/css/main.css
+++ b/css/main.css
@@ -773,6 +773,7 @@ body {
     font-size: 18px;
     line-height: 1.22;
     letter-spacing: 0.02em;
+    text-decoration: none;
     color: var(--link-hover-blue-color);
   }
 }
