--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -66,10 +66,15 @@
 .modal-form-checkbox {
   @extend %align;
   margin-bottom: 30px;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .form-checkbox {
@@ -130,11 +135,16 @@
 }
 
 .agreement-condition-link {
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--checkbox-link-color);
   text-decoration: underline;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .button-send-form {
