--- a/css/main.css
+++ b/css/main.css
@@ -464,6 +464,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: var(--backdrop-background-color);
+  overflow: scroll;
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
@@ -578,10 +579,16 @@ body {
 
 .modal-form-checkbox {
   margin-bottom: 30px;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
+}
+@media screen and (min-width: 1200px) {
+  .modal-form-checkbox {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .form-checkbox {
@@ -634,11 +641,17 @@ body {
 }
 
 .agreement-condition-link {
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--checkbox-link-color);
   text-decoration: underline;
+}
+@media screen and (min-width: 1200px) {
+  .agreement-condition-link {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .button-send-form {
@@ -690,9 +703,6 @@ body {
     justify-content: space-between;
     padding: 48px 40px;
   }
-  .mobile-menu-nav {
-    margin-bottom: 302px;
-  }
   .mobile-menu-nav__item:not(:last-child) {
     margin-bottom: 32px;
   }
@@ -730,7 +740,10 @@ body {
     fill: var(--link-hover-blue-color);
   }
   .mobile-menu-contacts {
-    margin-bottom: 64px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: auto;
+    margin-bottom: auto;
   }
   .mobile-menu-contacts__item:not(:last-child) {
     margin-bottom: 32px;
@@ -817,10 +830,12 @@ body {
   color: var(--white-text-color);
   text-align: center;
   background-image: linear-gradient(var(--hero-background-image), var(--hero-background-image)), url("../images/hero-mobile.jpg");
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
-@media screen and (min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+
+@media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
   .hero {
     background-image: linear-gradient(var(--hero-background-image), var(--hero-background-image)), url("../images/hero-mobile@2x.jpg");
   }
@@ -830,7 +845,7 @@ body {
     background-image: linear-gradient(var(--hero-background-image), var(--hero-background-image)), url("../images/hero-tablet.jpg");
   }
 }
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px), (min-resolution: 192dpi) and (min-width: 768px) {
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px), screen and (min-resolution: 192dpi) and (min-width: 768px), screen and (min-resolution: 2dppx) and (min-width: 768px) {
   .hero {
     background-image: linear-gradient(var(--hero-background-image), var(--hero-background-image)), url("../images/hero-tablet@2x.jpg");
   }
@@ -840,12 +855,11 @@ body {
     background-image: linear-gradient(var(--hero-background-image), var(--hero-background-image)), url("../images/hero-desktop.jpg");
   }
 }
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px), (min-resolution: 192dpi) and (min-width: 1200px) {
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px), screen and (min-resolution: 192dpi) and (min-width: 1200px), screen and (min-resolution: 2dppx) and (min-width: 1200px) {
   .hero {
     background-image: linear-gradient(var(--hero-background-image), var(--hero-background-image)), url("../images/hero-desktop@2x.jpg");
   }
 }
-
 @media screen and (min-width: 1200px) {
   .hero {
     padding-top: 200px;
@@ -853,7 +867,8 @@ body {
   }
 }
 .hero__title {
-  width: 360px;
+  width: 100%;
+  max-width: 360px;
   margin-top: 0;
   margin-bottom: 30px;
   margin-left: auto;
@@ -1024,7 +1039,12 @@ body {
 }
 
 .group-social {
-  padding-bottom: 30px;
+  padding-bottom: 24px;
+}
+@media screen and (min-width: 1200px) {
+  .group-social {
+    padding-bottom: 30px;
+  }
 }
 
 .member__team-subtitle {
