--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -5,6 +5,7 @@
   width: 100%;
   height: 100%;
   background-color: var(--backdrop-background-color);
+  overflow: scroll;
 
   opacity: 1;
   visibility: visible;
