--- a/sass/layout/_team-members.scss
+++ b/sass/layout/_team-members.scss
@@ -30,7 +30,11 @@
 }
 
 .group-social {
-  padding-bottom: 30px;
+  padding-bottom: 24px;
+
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 30px;
+  }
 }
 
 .member__team-subtitle {
@@ -41,6 +45,7 @@
 
 .team-social-list {
   display: flex;
+
   column-gap: 10px;
   align-items: center;
   justify-content: center;
