--- a/css/main.css
+++ b/css/main.css
@@ -883,7 +883,7 @@ body {
 
 @media screen and (min-width: 1200px) {
   .hero__title {
-    width: 696px;
+    max-width: 696px;
     font-size: 44px;
   }
 }
