--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -81,7 +81,7 @@
 
 @media screen and (min-width: 1200px) {
   .hero__title {
-    width: 696px;
+    max-width: 696px;
     font-size: 44px;
   }
 }
